--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
 <style>
 body {
-    background: lightgreen;
+    background: purple;
     font-family: Verdana;
 }  
 #content {
-    background: lightyellow;
+    background: lightgreen;
     min-width: 200px;
     max-width: 500px;
     padding: 50px;
@@ -40,7 +40,7 @@ h3 {
          <p>
             I enjoy art, metal detecting, and vacations at the beach.
          </p>
-        <h3>EDUCATION</h3>
+        <h3>EDUCATION (currently pursuing)</h3>
         Criminal Justice<br />
         Bob Jones University
     </div>
