--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ h3 {
         
          <p>I am a junior at Bob Jones University studying criminal justice. I work as a freelance artist.</p>
          <p>
-            I am still looking for a church (my past one just split)'
+            I am still looking for a church (my past one just split).
          </p> 
          <p>
             I enjoy art, metal detecting, and vacations at the beach.
